--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,4 +2,12 @@ body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    background-color: var(--color-1);
+    color: var(--color-text);
+    font-family: "Luxurious Roman", cursive;
+}
+
+.products-container {
+    text-align: center;
+    margin-bottom: 5em;
 }
