--- a/client/src/index.css
+++ b/client/src/index.css
@@ -7,7 +7,14 @@ body {
     font-family: "Luxurious Roman", cursive;
 }
 
-.products-container {
-    text-align: center;
-    margin-bottom: 5em;
+.slick-dots li button:before {
+    color: white !important;
+    font-size: 1rem !important;
+    margin: 1em !important;
+}
+
+.slick-dots li.slick-active button:before {
+    color: white !important;
+    font-size: 1.3rem !important;
+    margin: 0.8em !important;
 }
