--- a/client/src/index.css
+++ b/client/src/index.css
@@ -25,3 +25,32 @@ a {
     font-size: 1.3rem !important;
     margin: 0.8em !important;
 }
+
+
+/*FAB button*/
+
+.kc_fab_main_btn {
+    margin-top: -57px;
+    width: 30px;
+    height: 30px;
+    z-index: 101;
+    position: fixed;
+    margin-right: 5em !important;
+    margin-left: 93% !important;
+    border-radius: 100%;
+    background: transparent;
+    border: none;
+    outline: none;
+    color: #fff;
+    font-size: 25px;
+    text-align: center;
+    transition: 0.3s;
+    float: right;
+}
+
+.kc_fab_main_btn:focus {
+    transform: scale(1.1);
+    transform: rotate(360deg);
+    -ms-transform: rotate(360deg);
+    -webkit-transform: rotate(360deg);
+}
