--- a/client/src/index.css
+++ b/client/src/index.css
@@ -29,23 +29,60 @@ a {
 
 /*FAB button*/
 
+@keyframes slidein {
+    0% {
+        background-color: #1e1e35;
+    }
+    10% {
+        background-color: #252541;
+    }
+    20% {
+        background-color: #2d2d4e;
+    }
+    30% {
+        background-color: #34345a;
+    }
+    40% {
+        background-color: #3b3b67;
+    }
+    50% {
+        background-color: #424273;
+    }
+    60% {
+        background-color: #3b3b67;
+    }
+    70% {
+        background-color: #34345a;
+    }
+    80% {
+        background-color: #34345a;
+    }
+    90% {
+        background-color: #2d2d4e;
+    }
+    100% {
+        background-color: #252541;
+    }
+}
+
 .kc_fab_main_btn {
-    margin-top: -57px;
+    margin-top: -57px !important;
     width: 30px;
     height: 30px;
     z-index: 101;
     position: fixed;
-    margin-right: 5em !important;
-    margin-left: 85% !important;
-    border-radius: 100%;
+    color: #fff;
+    box-shadow: 0.5px 0.5px 0.2px 0.5px var(--color-text);
     background: transparent;
     border: none;
     outline: none;
-    color: #fff;
-    font-size: 25px;
-    text-align: center;
-    transition: 0.3s;
-    float: right;
+    border-radius: 0.5em;
+    margin: 0 0 0 50%;
+}
+
+.kc_fab_main_btn:hover {
+    box-shadow: 1px 1px 0.2px 0.5px var(--color-text);
+    animation: slidein 1.5s infinite;
 }
 
 .kc_fab_main_btn:focus {
@@ -53,4 +90,23 @@ a {
     transform: rotate(360deg);
     -ms-transform: rotate(360deg);
     -webkit-transform: rotate(360deg);
+}
+
+.btn {
+    z-index: 1000;
+    width: 2em;
+    height: 2em;
+    position: fixed;
+    margin: 0.2em;
+    color: #fff;
+    box-shadow: 0.5px 0.5px 0.2px 0.5px var(--color-text);
+    background-color: #1e1e35;
+    border: none;
+    outline: none;
+    border-radius: 0.5em;
+}
+
+.btn:hover {
+    box-shadow: 1px 1px 0.2px 0.5px var(--color-text);
+    animation: slidein 1.5s infinite;
 }
