Add functionality to cart

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -14,6 +14,9 @@ a {
     /* no underline */
 }
 
+
+/*Imageslider*/
+
 .slick-dots li button:before {
     color: white !important;
     font-size: 1rem !important;
@@ -24,62 +27,4 @@ a {
     color: white !important;
     font-size: 1.3rem !important;
     margin: 0.8em !important;
-}
-
-
-/*FAB button*/
-
-@keyframes slidein {
-    0% {
-        background-color: #1e1e35;
-    }
-    10% {
-        background-color: #252541;
-    }
-    20% {
-        background-color: #2d2d4e;
-    }
-    30% {
-        background-color: #34345a;
-    }
-    40% {
-        background-color: #3b3b67;
-    }
-    50% {
-        background-color: #424273;
-    }
-    60% {
-        background-color: #3b3b67;
-    }
-    70% {
-        background-color: #34345a;
-    }
-    80% {
-        background-color: #34345a;
-    }
-    90% {
-        background-color: #2d2d4e;
-    }
-    100% {
-        background-color: #252541;
-    }
-}
-
-.btn {
-    z-index: 1000;
-    width: 2em;
-    height: 2em;
-    position: fixed;
-    margin: 0.2em;
-    color: #fff;
-    box-shadow: 0.5px 0.5px 0.2px 0.5px var(--color-text);
-    background-color: #1e1e35;
-    border: none;
-    outline: none;
-    border-radius: 0.5em;
-}
-
-.btn:hover {
-    box-shadow: 1px 1px 0.2px 0.5px var(--color-text);
-    animation: slidein 1.5s infinite;
 }
